# aoc

./: .gitignore  CLAUDE.md  Cargo.toml  output.txt  pyproject.toml  requirements.txt
2021/day00/: main.py
2021/day01/: main.py
2021/day02/: main.py
2021/day03/: part2.py
2021/day04/: main.py  part2.py
2021/day05/: part1.py
2021/day06/: part1.py  part2.py
2021/day07/: part1.py  part2.py
2021/day11/: part1.py
2021/day12/: part2.py
2021/day14/: part1.py  part2.py
2021/day15/: part1.py  part1a.py  part1b.py  sample3.txt
2021/day16/: brainstorm.py  part1.py
2022/day01/: main.py
2022/day03/: main.py
2022/day05/: main.py
2022/day07/: main.py
2022/day08/: main.py
2022/day10/: main.py
2022/day11/: main.py
2022/day12/: main.py
2022/day13/: main.py
2022/day18/: sample1.txt
2022/day19/: part1.py  run_blueprint_dfs.py
2022/day24/: main.py  sample3.txt
2022/day25/: main.py
2023/day01/: part1.py  part2.py
2023/day02/: part1.py  part2.py
2023/day04/: part1.py  part2.py
2023/day05/: part1.py  part2.py  sample.txt
2023/day06/: part2.py
2023/day07/: part1.py  part2.py
2023/day08/: part1.py  part2.py
2023/day09/: part1.py  part2.py
2023/day10/: part1.py  part2.py  part2b.py
2023/day11/: part1.py
2023/day12/: part1.py
2023/day13/: part1.py  part2.py  sample2.txt
2023/day14/: part1.py  part2.py
2023/day15/: part1.py  part2.py
2023/day17/: part1.py
2023/day18/: part1.py
2023/day19/: brainstorm.txt  part1.py
2023/day20/: part1.py
2023/day23/: part1.py
2023/day24/: part1.py  sample2.txt
2023/day25/: input_modified.txt  part1.py  sample1.txt
2023/sandbox/: experiment2.py
2024/day01/: day01.rs  part2.py
day01/: sample.txt
day02/: main.py
day03/: main.py
day04/: main.py
day05/: main.py
day06/: main.py
day07/: main.py
day08/: main.py
day09/: main.py
day10/: main.py
day11/: brainstorm.txt  main.py
day13/: brainstorm.txt  main.py
day14/: brainstorm.txt  main.py
day15/: main.py
day16/: main.py  main.rs  main1.py  main_option1.py  parse_valves.py  part1.py
day17/: main.py  part2.py  part2_not_mine.py
day18/: main.py  main_option1.py  sample3.txt
day19/: brainstorm.txt  main.py  models.py  run_blueprint_bfs.py
day19/managers/: currency_manager.py  log_manager.py  parser_manager.py  robot_cost_converter.py  shop.py  simulation.py
day19/models/: blueprint.py  inventory.py  minerals.py  ore_wallet.py  robot_cost.py  robot_cost_in_ores.py  simplified_blueprint.py  wallet.py
day19b/: main.py
day20/: main.py
day21/: part1.py  part2.py
day22/: main.py
day23/: main.py  try_contract_grid.py  try_expand_grid.py
day23/__checks__/: checks_try_contract_grid.py
day24/: bfs.py  draw_grid.py  draw_grid2.py  main.py
python/2021/day03/: part1.py
python/2021/day05/: part2.py
python/2021/day08/: part1.py  part2.py
python/2021/day09/: part1.py  part2.py
python/2021/day10/: part1.py  part2.py
python/2021/day12/: part1.py
python/2021/day13/: part1.py
python/2021/day14/: part2.py
python/2021/day15/: part2.py  sample2.txt
python/2021/day16/: answer_not_mine.py  part2.py
python/2022/day04/: main.py
python/2022/day06/: main.py
python/2022/day15/: main.py
python/2022/day16/: parse_valves.py  part2.py
python/2022/day17/: part1.py
python/2022/day19/: parse_blueprints.py  part2.py
python/2022/day23/__checks__/: checks_try_expand_grid.py
python/2023/day02/: part1.py  part2.py
python/2023/day03/: part1.py  part2.py
python/2023/day04/: part1.py  part2.py
python/2023/day05/: part2.py
python/2023/day06/: part1.py
python/2023/day07/: part1.py
python/2023/day09/: part1.py
python/2023/day10/: sample5.txt
python/2023/day11/: part2.py
python/2023/day12/: part1.py
python/2023/day13/: part1.py
python/2023/day14/: part1.py
python/2023/day16/: part1.py  part2.py
python/2023/day17/: part1.py  part2.py  sample2.txt
python/2023/day19/: part2.py
python/2023/day21/: part1.py
python/2023/day22/: harry_plotter.py  part1.py
python/2023/day23/: part2.py
python/2023/day24/: sample1.txt
python/2023/day25/: part1b.py
python/2023/sandbox/: experiment1.py
python/2024/: utils.py
python/2024/day01/: part1.py
python/2024/day02/: part1.py  part2.py
python/2024/day03/: part1.py  part2.py
python/2024/day04/: part1.py  part2.py
python/2024/day05/: part1.py  part2.py
python/2024/day06/: correct_map.txt  part1.py  part2.py  part2b.py  sample2.txt  sample3.txt
python/2024/day07/: part1.py  part2.py
python/2024/day08/: part1.py  part2.py
python/2024/day09/: part1.py  part2.py  part2b.py  part2c.py  sol.py
python/2024/day10/: part1.py  part2.py
python/2024/day11/: input.txt  part1.py  part2.py  sol.py
python/2024/day12/: brainstorm.py  brainstorm3.py  part1.py  part2.py
python/2024/day13/: part1a.py  part1b.py  part2.py  sample1.txt  sol.py
python/2024/day14/: part1.py  part2.py
python/2024/day15/: part1.py  part2.py
python/2024/day16/: part1.py  part2.py  sol.py  sol2.py  sol3.py
python/2024/day17/: part1.py  part2.py
python/2024/day18/: part1.py  part2.py
python/2024/day19/: part1.py  part2.py  sample2.txt
python/2024/day20/: part1.py  part2.py  sol.py
python/2024/day21/: input.txt  part1.py  part1_brute.py  part1_smarter.py  part2.py  sol.py
python/2024/day22/: part1.py  part2.py
python/2024/day23/: part1.py  part2.py  sample3.txt
python/2024/day24/: input.txt  part1.py  part2.py
python/2024/day25/: input.txt  part1.py  sample1.txt
python/2024/dayxx/: part1.py
rust/: Cargo.toml
