[tool.poetry]
name = "aoc2022"
version = "0.1.0"
description = ""
authors = ["Jevgeni Rumjantsev <jrumjantsev@box.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
numpy = "^1.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
