[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"

[[bin]]
name = "2024_day01_part1"
path = "bin/2024/day01/part1.rs"

[[bin]]
name = "2024_day01_part2"
path = "bin/2024/day01/part2.rs"

[[bin]]
name = "2024_day02_part1"
path = "bin/2024/day02/part1.rs"

[[bin]]
name = "2024_day02_part2"
path = "bin/2024/day02/part2.rs"