[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
regex = "1.11.1"
env_logger = "0.11.6"
anyhow = "1.0.95"
thiserror = "2.0.11"

[[bin]]
name = "2024_day01_part1"
path = "bin/2024/day01/part1.rs"

[[bin]]
name = "2024_day01_part2"
path = "bin/2024/day01/part2.rs"

[[bin]]
name = "2024_day02_part1"
path = "bin/2024/day02/part1.rs"

[[bin]]
name = "2024_day02_part2"
path = "bin/2024/day02/part2.rs"

[[bin]]
name = "2024_day03_part1"
path = "bin/2024/day03/part1.rs"

[[bin]]
name = "2024_day03_part2"
path = "bin/2024/day03/part2.rs"

[[bin]]
name = "2024_day04_part1"
path = "bin/2024/day04/part1.rs"

[[bin]]
name = "2024_day04_part2"
path = "bin/2024/day04/part2.rs"

[[bin]]
name = "2024_day05_part1"
path = "bin/2024/day05/part1.rs"

[[bin]]
name = "2024_day05_part2"
path = "bin/2024/day05/part2.rs"

[[bin]]
name = "2024_day06_part1"
path = "bin/2024/day06/part1.rs"

[[bin]]
name = "2024_day06_part2"
path = "bin/2024/day06/part2.rs"

[[bin]]
name = "2024_day07_part1"
path = "bin/2024/day07/part1.rs"

[[bin]]
name = "2024_day07_part2"
path = "bin/2024/day07/part2.rs"

[[bin]]
name = "2024_day08_part1"
path = "bin/2024/day08/part1.rs"

[[bin]]
name = "2024_day08_part2"
path = "bin/2024/day08/part2.rs"

[[bin]]
name = "2024_day09_part1"
path = "bin/2024/day09/part1.rs"

[[bin]]
name = "2024_day09_part2"
path = "bin/2024/day09/part2.rs"

[[bin]]
name = "2024_day10_part1"
path = "bin/2024/day10/part1.rs"

[[bin]]
name = "2024_day10_part2"
path = "bin/2024/day10/part2.rs"

[[bin]]
name = "2024_day11_part1"
path = "bin/2024/day11/part1.rs"

[[bin]]
name = "2024_day11_part2"
path = "bin/2024/day11/part2.rs"

[[bin]]
name = "2024_day12_part1"
path = "bin/2024/day12/part1.rs"

[[bin]]
name = "2024_day12_part2"
path = "bin/2024/day12/part2.rs"

[[bin]]
name = "2024_day13_part1"
path = "bin/2024/day13/part1.rs"

[[bin]]
name = "2024_day13_part2"
path = "bin/2024/day13/part2.rs"

[[bin]]
name = "2024_day14_part1"
path = "bin/2024/day14/part1.rs"

[[bin]]
name = "2024_day14_part2"
path = "bin/2024/day14/part2.rs"

[[bin]]
name = "2024_day16_part1"
path = "bin/2024/day16/part1.rs"

[[bin]]
name = "2024_day16_part2"
path = "bin/2024/day16/part2.rs"

[[bin]]
name = "2024_dayxx_part1"
path = "bin/2024/dayxx/part1.rs"

[[bin]]
name = "2024_dayxx_part2"
path = "bin/2024/dayxx/part2.rs"